# final_dashboard

./: README.md  abnormality.py  functions.py  healtdata.py  healthdata.py  loaddata.py  main.py  person.py  plots.py  pyproject.toml  requirements.txt  trashcode.py
data/: person.json  physiological_cycles.csv  physiologische_zyklen_Lena.csv  physiologische_zyklen_test2.xlsx  ~$physiologische_zyklen_test2.xlsx
data/person_info/: person_db.json
data/physiological_cycles/: physiologische_zyklen_test2.csv
