[project]
name = "final_dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "WJMCI", email = "wj2970@mci4me.at"},
]
dependencies = ["numpy>=2.3.0", "pandas>=2.3.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
