[project]
name = "final-dashboard"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "PaulRiedlsperger", email = "rp0317@mci4me.at"},
]
dependencies = ["numpy>=2.3.0", "pandas>=2.3.0", "plotly>=6.2.0", "streamlit>=1.46.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
